// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table :props :props.bordered, :props:hover, :props.stripe, :props.size, :props.verticalAlign, :props.height height = 100 1`] = `
<div class="t-table t-size-m" style="position: relative;">
  <div class="t-table__content" style="height: 100px;">
    <table class="t-table--layout-fixed">
      <colgroup>
        <col>
        <col>
        <col>
      </colgroup>
      <thead class="t-table__header">
        <tr>
          <th data-colkey="id" class="t-table__th-id">
            <div class="t-table__th-cell-inner">id</div>
          </th>
          <th data-colkey="type" class="t-table__th-type">
            <div class="t-table__th-cell-inner">类型</div>
          </th>
          <th data-colkey="value" class="t-table__th-value">
            <div class="t-table__th-cell-inner">取值</div>
          </th>
        </tr>
      </thead>
      <tbody class="t-table__body">
        <tr class="">
          <td class="">1</td>
          <td class="">Number</td>
          <td class="">1</td>
        </tr>
        <tr class="">
          <td class="">2</td>
          <td class="">Number</td>
          <td class="">2</td>
        </tr>
        <tr class="">
          <td class="">3</td>
          <td class="">Number</td>
          <td class="">3</td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Table :props :props.bordered, :props:hover, :props.stripe, :props.size, :props.verticalAlign, :props.height size = "large", verticalAlign="top" 1`] = `
<div class="t-table t-size-l t-vertical-align-top" style="position: relative;">
  <div class="t-table__content">
    <table class="t-table--layout-fixed">
      <colgroup></colgroup>
      <thead class="t-table__header">
        <tr></tr>
      </thead>
      <tbody class="t-table__body">
        <tr class="t-table__empty-row">
          <td colspan="0">
            <div class="t-table__empty">暂无数据</div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Table :props :props.bordered, :props:hover, :props.stripe, :props.size, :props.verticalAlign, :props.height size = "medium", verticalAlign="bottom" 1`] = `
<div class="t-table t-size-m t-vertical-align-bottom" style="position: relative;">
  <div class="t-table__content">
    <table class="t-table--layout-fixed">
      <colgroup></colgroup>
      <thead class="t-table__header">
        <tr></tr>
      </thead>
      <tbody class="t-table__body">
        <tr class="t-table__empty-row">
          <td colspan="0">
            <div class="t-table__empty">暂无数据</div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Table :props :props.bordered, :props:hover, :props.stripe, :props.size, :props.verticalAlign, :props.height size = "small", verticalAlign="middle" 1`] = `
<div class="t-table t-size-s t-table--bordered t-table--striped t-table--hoverable" style="position: relative;">
  <div class="t-table__content">
    <table class="t-table--layout-fixed">
      <colgroup>
        <col>
        <col>
        <col>
      </colgroup>
      <thead class="t-table__header">
        <tr>
          <th data-colkey="id" class="t-table__th-id">
            <div class="t-table__th-cell-inner">id</div>
          </th>
          <th data-colkey="type" class="t-table__th-type">
            <div class="t-table__th-cell-inner">类型</div>
          </th>
          <th data-colkey="value" class="t-table__th-value">
            <div class="t-table__th-cell-inner">取值</div>
          </th>
        </tr>
      </thead>
      <tbody class="t-table__body">
        <tr class="">
          <td class="">1</td>
          <td class="">Number</td>
          <td class="">1</td>
        </tr>
        <tr class="">
          <td class="">2</td>
          <td class="">Number</td>
          <td class="">2</td>
        </tr>
        <tr class="">
          <td class="">3</td>
          <td class="">Number</td>
          <td class="">3</td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Table :props :props.columns \`columns\` is undefined 1`] = `
<div class="t-table t-size-m" style="position: relative;">
  <div class="t-table__content">
    <table class="t-table--layout-fixed">
      <colgroup></colgroup>
      <thead class="t-table__header">
        <tr></tr>
      </thead>
      <tbody class="t-table__body">
        <tr class="t-table__empty-row">
          <td colspan="0">
            <div class="t-table__empty">暂无数据</div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Table :props :props.columns \`columns\` with align, width, minWidth and ellipsis 1`] = `
<div class="t-table t-size-m" style="position: relative;">
  <div class="t-table__content">
    <table class="t-table--layout-fixed">
      <colgroup>
        <col style="width: 100px;">
        <col>
        <col>
      </colgroup>
      <thead class="t-table__header">
        <tr>
          <th data-colkey="id" class="t-table__th-id">
            <div class="t-table__th-cell-inner">id</div>
          </th>
          <th data-colkey="type" class="t-table__th-type">
            <div class="t-table__th-cell-inner">类型</div>
          </th>
          <th data-colkey="value" class="t-table__th-value">
            <div class="t-table__th-cell-inner">取值</div>
          </th>
        </tr>
      </thead>
      <tbody class="t-table__body">
        <tr class="">
          <td class="t-table-td--ellipsis">
            <div class="t-table__ellipsis">1</div>
          </td>
          <td class="">Number</td>
          <td class="">1</td>
        </tr>
        <tr class="">
          <td class="t-table-td--ellipsis">
            <div class="t-table__ellipsis">2</div>
          </td>
          <td class="">Number</td>
          <td class="">2</td>
        </tr>
        <tr class="">
          <td class="t-table-td--ellipsis">
            <div class="t-table__ellipsis">3</div>
          </td>
          <td class="">Number</td>
          <td class="">3</td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Table :props :props.columns \`columns\` with children 1`] = `
<div class="t-table t-size-m t-table--multiple-header" style="position: relative;">
  <div class="t-table__content">
    <table class="t-table--layout-fixed">
      <colgroup>
        <col style="width: 100px;">
        <col style="width: 100px;">
        <col style="width: 100px;">
        <col style="width: 100px;">
        <col style="width: 100px;">
        <col style="width: 100px;">
      </colgroup>
      <thead class="t-table__header t-table__header--multiple">
        <tr>
          <th colspan="4" class="">
            <div class="t-table__th-cell-inner">汇总属性</div>
          </th>
          <th colspan="2" class="">
            <div class="t-table__th-cell-inner">属性及说明</div>
          </th>
        </tr>
        <tr>
          <th data-colkey="platform" rowspan="2" class="test t-table__th-platform">
            <div class="t-table__th-cell-inner">平台</div>
          </th>
          <th colspan="3" class="">
            <div class="t-table__th-cell-inner">类型及默认值</div>
          </th>
          <th data-colkey="property" rowspan="2" class="test2 t-table__th-property">
            <div class="t-table__th-cell-inner">属性</div>
          </th>
          <th data-colkey="description" rowspan="2" class="row t-table__th-description">
            <div class="t-table__th-cell-inner">说明</div>
          </th>
        </tr>
        <tr>
          <th data-colkey="type" class="row t-table__header-th--bordered t-table__th-type">
            <div class="t-table__th-cell-inner">类型</div>
          </th>
          <th data-colkey="default" class="test4 t-table__th-default">
            <div class="t-table__th-cell-inner">默认值</div>
          </th>
          <th data-colkey="needed" class="test3 t-table__th-needed">
            <div class="t-table__th-cell-inner">是否必传</div>
          </th>
        </tr>
      </thead>
      <tbody class="t-table__body">
        <tr class="">
          <td class="test t-table-td--ellipsis">
            <div class="t-table__ellipsis">公有</div>
          </td>
          <td class="row t-table-td--ellipsis">
            <div class="t-table__ellipsis">any[]</div>
          </td>
          <td class="test4 t-table-td--ellipsis">
            <div class="t-table__ellipsis">[]</div>
          </td>
          <td class="test3 t-table-td--ellipsis">
            <div class="t-table__ellipsis">Y</div>
          </td>
          <td class="test2 t-table-td--ellipsis">
            <div class="t-table__ellipsis">data</div>
          </td>
          <td class="row t-table-td--ellipsis">
            <div class="t-table__ellipsis">数据源</div>
          </td>
        </tr>
        <tr class="">
          <td class="test t-table-td--ellipsis">
            <div class="t-table__ellipsis">公有</div>
          </td>
          <td class="row t-table-td--ellipsis">
            <div class="t-table__ellipsis">String</div>
          </td>
          <td class="test4 t-table-td--ellipsis">
            <div class="t-table__ellipsis">-1</div>
          </td>
          <td class="test3 t-table-td--ellipsis">
            <div class="t-table__ellipsis">Y</div>
          </td>
          <td class="test2 t-table-td--ellipsis">
            <div class="t-table__ellipsis">rowkey</div>
          </td>
          <td class="row t-table-td--ellipsis">
            <div class="t-table__ellipsis">指定rowkey</div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Table :props :props.columns \`columns\` with fixed column 1`] = `
<div class="t-table t-size-m t-table--column-fixed" style="position: relative;">
  <div class="t-table__content">
    <table class="t-table--layout-fixed">
      <colgroup>
        <col>
        <col>
        <col>
      </colgroup>
      <thead class="t-table__header">
        <tr>
          <th data-colkey="id" class="t-table__th-id">
            <div class="t-table__th-cell-inner">id</div>
          </th>
          <th data-colkey="type" class="t-table__th-type">
            <div class="t-table__th-cell-inner">类型</div>
          </th>
          <th data-colkey="value" class="t-table__th-value">
            <div class="t-table__th-cell-inner">取值</div>
          </th>
        </tr>
      </thead>
      <tbody class="t-table__body">
        <tr class="">
          <td class="">1</td>
          <td class="">Number</td>
          <td class="">1</td>
        </tr>
        <tr class="">
          <td class="">2</td>
          <td class="">Number</td>
          <td class="">2</td>
        </tr>
        <tr class="">
          <td class="">3</td>
          <td class="">Number</td>
          <td class="">3</td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
